[package]
name = "sdr-gui"
version = "0.1.0"
authors = ["Tomas Korcak <korczis@gmail.com>"]

[dependencies]
sdr = { path = "../sdr"}
clap = "2.24.2"
conrod = "0.52.0"
ocl = "0.14.1"
piston = "0.32.0"
piston-shaders_graphics2d = "0.3.1"
piston_window = "0.66.0"

[[bin]]
name = "sdr-gui"
path = "src/main.rs"